# pycemrg-meshing

./: .gitignore  LICENSE  README.md  imgmesh_invocation.sh  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: add_new_m3d_binaries.md  index.md  macos_gatekeeper.md
docs/api/: index.md  overview.md
docs/cli/: index.md
myocardium_OUT/: heart_mesh.pts  heart_mesh_invocation.sh  heart_mesh_params.data
src/pycemrg_meshing/: __init__.py  cli.py
src/pycemrg_meshing/data/: models.yaml
src/pycemrg_meshing/logic/: job.py  results.py  runners.py
src/pycemrg_meshing/tools/: binaries.py  parameters.py
tests/: conftest.py  test_binaries.py  test_cli.py  test_job.py  test_parameters.py  test_runners.py  test_smoke.py
