[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycemrg-meshing"
version = "0.1.0.dev0"
description = "Python wrapper for the meshtools3d C++ binaries (meshtools3d, laplace_solver)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OpenHeartDevelopers" }]
keywords = ["meshing", "cardiac", "cgal", "meshtools3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pycemrg",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-PyYAML",
]

[project.scripts]
pycemrg-meshing = "pycemrg_meshing.cli:main"

[project.urls]
Homepage = "https://github.com/OpenHeartDevelopers/pycemrg-meshing"
Source = "https://github.com/OpenHeartDevelopers/pycemrg-meshing"
Issues = "https://github.com/OpenHeartDevelopers/pycemrg-meshing/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pycemrg_meshing = ["data/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/pycemrg_meshing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that download and run the real meshtools3d binary (off by default)",
]
